--- a/bower.json
+++ b/bower.json
@@ -43,6 +43,11 @@
     "modestmaps-js": "git://github.com/modestmaps/modestmaps-js.git#~3.3.6",
     "leaflet": "git://github.com/Leaflet/Leaflet.git#~0.7.3",
     "TimelineJS": "git://github.com/NUKnightLab/TimelineJS.git#~2.33.1",
-    "underscore.string": "~2.3.3"
+    "underscore.string": "~2.3.3",
+    "chroma-js": "~0.6.1",
+    "heatmap": "https://github.com/pa7/heatmap.js",
+    "MathJax": "~2.4.0",
+    "normalize-opentype.css": "~0.2.0",
+    "tile.stamen": "http://maps.stamen.com/js/tile.stamen.js"
   }
 }
