continued work on slide tools

--- a/bower.json
+++ b/bower.json
@@ -25,28 +25,31 @@
   ],
   "dependencies": {
     "backbone": "~1",
+    "chroma-js": ">=0.6",
+    "continental": "git://github.com/sathomas/continental.git",
+    "crossfilter": "~1.3",
     "d3": "~3",
-    "eventie": ">=1.0.4 <2",
     "eventEmitter": "4.x",
+    "eventie": ">=1.0.4 <2",
     "flot": "~0.8.3",
     "flotr2": "*",
     "headroom.js": ">=0.6.0",
+    "heatmap": "https://raw.githubusercontent.com/pa7/heatmap.js/master/src/heatmap.js",
     "imagesloaded": ">=3.0.0",
-    "jquery.sparkline": "~2.1.2",
+    "jquery": "~2",
     "jquery-chronoline": "~0.2.6",
+    "jquery.sparkline": "~2.1.2",
+    "leaflet": "git://github.com/Leaflet/Leaflet.git#~0.7.3",
+    "modestmaps-js": "git://github.com/modestmaps/modestmaps-js.git#~3.3.6",
     "normalize-css": "~3.0.1",
+    "normalize-opentype.css": "~0.2.0",
+    "queue-async": "~1.0.7",
     "raphael": "~2.1.2",
     "sigma": "~1.0.2",
-    "wordcloud2.js": "*",
-    "treemap-squared": "git://github.com/imranghory/treemap-squared.git",
-    "continental": "git://github.com/sathomas/continental.git",
-    "modestmaps-js": "git://github.com/modestmaps/modestmaps-js.git#~3.3.6",
-    "leaflet": "git://github.com/Leaflet/Leaflet.git#~0.7.3",
-    "TimelineJS": "git://github.com/NUKnightLab/TimelineJS.git#~2.33.1",
-    "underscore.string": ">=2.3.3",
-    "chroma-js": "~0.6.1",
-    "normalize-opentype.css": "~0.2.0",
     "tile.stamen": "http://maps.stamen.com/js/tile.stamen.js",
-    "heatmap": "https://raw.githubusercontent.com/pa7/heatmap.js/master/src/heatmap.js"
+    "TimelineJS": "git://github.com/NUKnightLab/TimelineJS.git#~2.33.1",
+    "treemap-squared": "git://github.com/imranghory/treemap-squared.git",
+    "underscore.string": ">=2.3.3",
+    "wordcloud2.js": "*"
   }
 }
