--- a/bower.json
+++ b/bower.json
@@ -51,6 +51,7 @@
     "treemap-squared": "git://github.com/imranghory/treemap-squared.git",
     "underscore.string": ">=2.3.3",
     "wordcloud2.js": "*",
-    "snap.svg": "~0.3.0"
+    "snap.svg": "~0.3.0",
+    "iwanthue": "https://github.com/medialab/iwanthue"
   }
 }
