--- a/bower.json
+++ b/bower.json
@@ -53,6 +53,7 @@
     "wordcloud2.js": "*",
     "snap.svg": "~0.3.0",
     "iwanthue": "https://github.com/medialab/iwanthue",
-    "prism": "git://github.com/LeaVerou/prism.git#gh-pages"
+    "prism": "git://github.com/LeaVerou/prism.git#gh-pages",
+    "pubcss": "thomaspark/pubcss"
   }
 }
